--- a/styles/screen.css
+++ b/styles/screen.css
@@ -2,8 +2,9 @@ body {
     font-family: Helvetica, sans-serif;
     color: #EAE8FF;
     background: #503E64;
+    margin: 0 auto; 
     /*padding: 0 40px;*/
-    text-align: right;
+   /* text-align: right;*/
 }
 
 
