--- a/styles/screen.css
+++ b/styles/screen.css
@@ -14,7 +14,7 @@ h1 {
     background-repeat: no-repeat; 
     background-size: 50px; 
     padding-left: 55px; 
-    margin: 100px 0 25px 0; 
+    /*margin: 100px 0 25px 0; */
     letter-spacing: -2px;
 }
 
