--- a/index.liquid
+++ b/index.liquid
@@ -4,3 +4,25 @@ title: 11ty Boilerplate
 ---
 
 <h1>Active Solar System Experiments</h1>
+   <table>
+        <tr>
+            <td><img src="/images/mars.png" alt="mars"></td>
+            <td><img src="/images/rocketship.png" alt="Rocketship"></td>
+            <td> <h2> Mars </h2> <p>Experiment 31 Active - Updated April 2024</p> </td>
+        </tr>
+        <tr>
+            <td><img src="/images/IO.png" alt="Io"></td>
+            <td><img src="/images/rocketship.png" alt="Rocketship"></td>
+            <td> <h2> Io </h2> <p>Experiment Moons Active - Updated April 2024</p> </td>
+        </tr>
+        <tr>
+            <td><img src="/images/Neptune.png" alt="Neptune"></td>
+            <td><img src="/images/rocketship.png" alt="Rocketship"></td>
+            <td> <h2> Neptune </h2> <p>Experiment Outer Active - Updated April 2024</p> </td>
+        </tr>
+        <tr>
+            <td><img src="/images/Kuiperbelt.png" alt="Image 7"></td>
+            <td><img src="/images/rocketship.png" alt="Rocketship"></td>
+           <td> <h2> Kuiper Belt </h2> <p>Experiment Rocky Active - Updated April 2024</p> </td>
+        </tr>
+    </table>
