--- a/styles/screen.css
+++ b/styles/screen.css
@@ -12,7 +12,7 @@ h1 {
     background-image: url('/images/crescentmoon.png');
     font-size: 64px;
     background-repeat: no-repeat; 
-    background-size: 50px; 
+    background-size: 70px; 
     padding-left: 55px; 
     /*margin: 100px 0 25px 0; */
     letter-spacing: -2px;
@@ -21,6 +21,8 @@ h1 {
 table {
     width: 100%;
     border-collapse: collapse;
+    border-bottom: 1px solid #ddd; 
+    margin-bottom: 20px;
 }
 
 td {
