--- a/styles/screen.css
+++ b/styles/screen.css
@@ -10,23 +10,24 @@ body {
 
 h1 {
     background-image: url('/images/crescentmoon.png');
-    font-size: 64px;
+    font-size: 48px; 
     background-repeat: no-repeat; 
-    background-size: 70px; 
+    background-size: 40px; 
     padding-left: 55px; 
-    /*margin: 100px 0 25px 0; */
+    margin: 50px 0 25px 0;
     letter-spacing: -2px;
 }
 
 table {
-    width: 100%;
+    width: 90%;
+    max-width: 800px; 
     border-collapse: collapse;
-    border-bottom: 1px solid #ddd; 
+    border-bottom: 1px solid #ddd;
     margin-bottom: 20px;
 }
 
 td {
-    padding: 10px;
+    padding: 8px; 
     border: 1px solid #ddd;
 }
 
@@ -34,5 +35,5 @@ img {
     max-width: 100%;
     height: auto;
     display: block;
+    margin-right: 10px; 
 }
-
