--- a/styles/screen.css
+++ b/styles/screen.css
@@ -23,6 +23,7 @@ table {
     border-collapse: collapse;
     border-bottom: 1px solid #ddd; 
     margin-bottom: 20px;
+    padding: 0 20px; 
 }
 
 td {
